fetch and save laps